--- a/DoToo/DoToo.csproj
+++ b/DoToo/DoToo.csproj
@@ -68,6 +68,7 @@
         <PackageReference Include="SQLitePCLRaw.core" Version="2.1.11"/>
         <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.11"/>
         <PackageReference Include="SQLitePCLRaw.provider.sqlite3" Version="2.1.11"/>
+        <PackageReference Include="SQLitePCLRaw.provider.winsqlite3" Version="2.1.11"/>
     </ItemGroup>
 
 </Project>
